--- a/colors/package.json
+++ b/colors/package.json
@@ -8,7 +8,9 @@
         "@testing-library/user-event": "^13.5.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-router-dom": "^6.21.0",
         "react-scripts": "5.0.1",
+        "reactstrap": "^9.2.1",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
@@ -19,25 +21,25 @@
     },
     "eslintConfig": {
         "extends": [
-        "react-app",
-        "react-app/jest"
+            "react-app",
+            "react-app/jest"
         ]
     },
     "browserslist": {
         "production": [
-        ">0.2%",
-        "not dead",
-        "not op_mini all"
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
         ],
         "development": [
-        "last 1 chrome version",
-        "last 1 firefox version",
-        "last 1 safari version"
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
         ]
     },
     "jest": {
         "moduleNameMapper": {
-        "axios": "axios/dist/node/axios.cjs"
+            "axios": "axios/dist/node/axios.cjs"
         }
     }
 }
